rif/src/main/java/fr/inria/edelweiss/rif/javacc/RIFPSParser.java
/* Generated By:JavaCC: Do not edit this line. RIFPSParser.java */
package fr.inria.edelweiss.rif.javacc ;

import fr.inria.edelweiss.rif.api.* ;
import fr.inria.edelweiss.rif.ast.* ;

import java.io.InputStream ;
import java.util.Vector ;
import org.apache.logging.log4j.LogManager;

import org.apache.logging.log4j.Logger ;

/**
 * Represents the RIF-BLD grammar for the Presentation Syntax (PS) and handles the abstract syntax tree building on the fly
 * @author cfollenf */
@SuppressWarnings("all")
public class RIFPSParser implements RIFPSParserConstants {

        /** The entity class in which the AST will be stored. It also includes several informations
	 * related to the whole RIF document, like imported namespaces, etc. */
        private RIFPSDocument rifdoc ;

        /** Logger from log4j */
        private static Logger logger = LogManager.getLogger(RIFPSParser.class) ;

        public void setRIFDocument(RIFPSDocument rifdoc) {
                this.rifdoc = rifdoc ;
       }

        public RIFDocument parse() throws ParseException, TokenMgrError {
               Group payload = Document() ;
                if(payload == null) ; // there should be at least one import if there is no payload.
                this.rifdoc.setPayload(payload) ;
                return rifdoc ;
        }

/**** NONTERMINAL PRODUCTIONS ****/
  final public Group Document() throws ParseException {
 Group payload = null ; Annotation meta ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENMETA:
      meta = IRIMeta();
                             rifdoc.setMeta(meta) ;
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(DOCUMENT);
    jj_consume_token(OPENPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BASE:
      Base();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PREFIX:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      Prefix();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      Import();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GROUP:
    case OPENMETA:
      payload = Group();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(CLOSEPAR);
    jj_consume_token(0);
          {if (true) return payload ;}
    throw new Error("Missing return statement in function");
  }

/* The three next productions are directives. Directives affect the whole RIF document,
 * so they are not embedded in the AST */
  final public void Base() throws ParseException {
  String ns ;
    jj_consume_token(BASE);
    jj_consume_token(OPENPAR);
    ns = IRIRef();
    jj_consume_token(CLOSEPAR);
          rifdoc.setBaseNamespace(ns) ;
  }

  final public void Prefix() throws ParseException {
  Token p ; String ns ;
    jj_consume_token(PREFIX);
    jj_consume_token(OPENPAR);
    p = jj_consume_token(PREFIX_NAME);
    ns = IRIRef();
    jj_consume_token(CLOSEPAR);
          rifdoc.addPrefixedNamespace(p.image, ns) ;
  }

  final public void Import() throws ParseException {
  String loc, profile = null ;
    jj_consume_token(IMPORT);
    jj_consume_token(OPENPAR);
    loc = IRIRef();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ANGLEBRACKIRI:
      profile = IRIRef();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(CLOSEPAR);
          rifdoc.addImportedDocument(loc, profile) ;
  }

  final public Group Group() throws ParseException {
  Annotation a = null ; Group group = Group.create() ; IRule rule ; Group nested ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENMETA:
      a = IRIMeta();
                          group.setMeta(a) ;
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(GROUP);
    jj_consume_token(OPENPAR);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FORALL:
      case AND:
      case EXTERNAL:
      case GROUP:
      case LIST:
      case OPENMETA:
      case ANGLEBRACKIRI:
      case VAR:
      case QNAME_NS:
      case QNAME:
      case INTEGER:
      case DECIMAL:
      case DOUBLE:
      case STRING_LITERAL:
      case LOCALNAME:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      if (jj_2_1(2147483647)) {
        nested = Group();
                               group.addNestedGroup(nested) ;
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FORALL:
        case AND:
        case EXTERNAL:
        case LIST:
        case OPENMETA:
        case ANGLEBRACKIRI:
        case VAR:
        case QNAME_NS:
        case QNAME:
        case INTEGER:
        case DECIMAL:
        case DOUBLE:
        case STRING_LITERAL:
        case LOCALNAME:
          rule = Rule();
                            group.add(rule) ;
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(CLOSEPAR);
          {if (true) return group ;}
    throw new Error("Missing return statement in function");
  }

  final public IRule Rule() throws ParseException {
  IRule rule ; Annotation meta = null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENMETA:
      meta = IRIMeta();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FORALL:
            IClause c ; Var v ; Vector<Var> boundVars = new Vector<Var>() ;
      jj_consume_token(FORALL);
      label_4:
      while (true) {
        v = Var();
                                   boundVars.add(v) ;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VAR:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
      }
      jj_consume_token(OPENPAR);
      c = Clause();
      jj_consume_token(CLOSEPAR);
            Forall forall = Forall.create(boundVars, c) ; forall.setMeta(meta) ; rule = forall ;
      break;
    case AND:
    case EXTERNAL:
    case LIST:
    case OPENMETA:
    case ANGLEBRACKIRI:
    case VAR:
    case QNAME_NS:
    case QNAME:
    case INTEGER:
    case DECIMAL:
    case DOUBLE:
    case STRING_LITERAL:
    case LOCALNAME:
      rule = Clause();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return rule ;}
    throw new Error("Missing return statement in function");
  }

  final public IClause Clause() throws ParseException {
  IClause c ; Atomic a ; Annotation meta = null ; Entailment et ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENMETA:
      meta = IRIMeta();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    if (jj_2_2(2147483647)) {
      et = Implies();
                        et.setMeta(meta) ; c = et ;
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTERNAL:
      case LIST:
      case OPENMETA:
      case ANGLEBRACKIRI:
      case VAR:
      case QNAME_NS:
      case QNAME:
      case INTEGER:
      case DECIMAL:
      case DOUBLE:
      case STRING_LITERAL:
      case LOCALNAME:
        a = Atomic();
                      a.setMeta(meta) ; c = a ;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return c ;}
    throw new Error("Missing return statement in function");
  }

  final public Entailment Implies() throws ParseException {
  IConclusion conc ; IFormula cond ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
       And<Atomic> and = And.create() ; Atomic a ;
      jj_consume_token(AND);
      jj_consume_token(OPENPAR);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTERNAL:
        case LIST:
        case OPENMETA:
        case ANGLEBRACKIRI:
        case VAR:
        case QNAME_NS:
        case QNAME:
        case INTEGER:
        case DECIMAL:
        case DOUBLE:
        case STRING_LITERAL:
        case LOCALNAME:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_5;
        }
        a = Atomic();
                                          and.add(a) ;
      }
      jj_consume_token(CLOSEPAR);
       conc = and ;
      break;
    case EXTERNAL:
    case LIST:
    case OPENMETA:
    case ANGLEBRACKIRI:
    case VAR:
    case QNAME_NS:
    case QNAME:
    case INTEGER:
    case DECIMAL:
    case DOUBLE:
    case STRING_LITERAL:
    case LOCALNAME:
      conc = Atomic();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IF);
    cond = Formula();
     {if (true) return Entailment.create(conc, cond) ;}
    throw new Error("Missing return statement in function");
  }

  final public IFormula Formula() throws ParseException {
  IFormula f ; Annotation a = null ; Atomic at ; Predicate p ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENMETA:
      a = IRIMeta();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
          And<IFormula> and = And.create() ; IFormula conjFormula ;
      jj_consume_token(AND);
      jj_consume_token(OPENPAR);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXISTS:
        case AND:
        case OR:
        case EXTERNAL:
        case LIST:
        case OPENMETA:
        case ANGLEBRACKIRI:
        case VAR:
        case QNAME_NS:
        case QNAME:
        case INTEGER:
        case DECIMAL:
        case DOUBLE:
        case STRING_LITERAL:
        case LOCALNAME:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_6;
        }
        conjFormula = Formula();
                                                        and.add(conjFormula) ;
      }
      jj_consume_token(CLOSEPAR);
          and.setMeta(a) ; f = and ;
      break;
    case OR:
          Or or = Or.create() ; IFormula disjFormula ;
      jj_consume_token(OR);
      jj_consume_token(OPENPAR);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXISTS:
        case AND:
        case OR:
        case EXTERNAL:
        case LIST:
        case OPENMETA:
        case ANGLEBRACKIRI:
        case VAR:
        case QNAME_NS:
        case QNAME:
        case INTEGER:
        case DECIMAL:
        case DOUBLE:
        case STRING_LITERAL:
        case LOCALNAME:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_7;
        }
        disjFormula = Formula();
                                                       or.add(disjFormula) ;
      }
      jj_consume_token(CLOSEPAR);
          or.setMeta(a) ; f = or ;
      break;
    case EXISTS:
          Var v ; Vector<Var> boundVars = new Vector<Var>() ; IFormula existFormula ;
      jj_consume_token(EXISTS);
      label_8:
      while (true) {
        v = Var();
                                 boundVars.add(v) ;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VAR:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
      }
      jj_consume_token(OPENPAR);
      existFormula = Formula();
      jj_consume_token(CLOSEPAR);
          Exists exists = Exists.create(boundVars, existFormula) ; exists.setMeta(a) ; f = exists ;
      break;
    default:
      jj_la1[20] = jj_gen;
      if (jj_2_3(2147483647)) {
        at = Atomic();
                        at.setMeta(a) ; f = at ;
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTERNAL:
          jj_consume_token(EXTERNAL);
          jj_consume_token(OPENPAR);
          p = Atom(true);
          jj_consume_token(CLOSEPAR);
                                                               p.setMeta(a) ; f = p ;
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
       {if (true) return f ;}
    throw new Error("Missing return statement in function");
  }

  final public Atomic Atomic() throws ParseException {
  Atomic a ;
    if (jj_2_4(2147483647)) {
      a = Frame();
    } else if (jj_2_5(2147483647)) {
      a = BinaryOp();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ANGLEBRACKIRI:
      case QNAME_NS:
      case QNAME:
      case INTEGER:
      case DECIMAL:
      case DOUBLE:
      case STRING_LITERAL:
      case LOCALNAME:
        a = Atom(false);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return a ;}
    throw new Error("Missing return statement in function");
  }

  final public Predicate Atom(boolean ext) throws ParseException {
  Predicate p = null ; Const c ; Term t ;
    c = Const();
    jj_consume_token(OPENPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTERNAL:
    case LIST:
    case OPENMETA:
    case ANGLEBRACKIRI:
    case VAR:
    case QNAME_NS:
    case QNAME:
    case INTEGER:
    case DECIMAL:
    case DOUBLE:
    case STRING_LITERAL:
    case LOCALNAME:
      if (jj_2_6(2147483647)) {
        p = NamedArgsPredicate.create(ext, c) ; String n ;
        label_9:
        while (true) {
          n = QName();
          jj_consume_token(ARROW);
          t = Term();
                                           ((NamedArgsPredicate) p).addArgument(n, t) ;
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case QNAME_NS:
          case QNAME:
            ;
            break;
          default:
            jj_la1[23] = jj_gen;
            break label_9;
          }
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTERNAL:
        case LIST:
        case OPENMETA:
        case ANGLEBRACKIRI:
        case VAR:
        case QNAME_NS:
        case QNAME:
        case INTEGER:
        case DECIMAL:
        case DOUBLE:
        case STRING_LITERAL:
        case LOCALNAME:
        p = PositionalPredicate.create(ext, c) ;
          label_10:
          while (true) {
            t = Term();
                     ((PositionalPredicate) p).addArgument(t) ;
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case EXTERNAL:
            case LIST:
            case OPENMETA:
            case ANGLEBRACKIRI:
            case VAR:
            case QNAME_NS:
            case QNAME:
            case INTEGER:
            case DECIMAL:
            case DOUBLE:
            case STRING_LITERAL:
            case LOCALNAME:
              ;
              break;
            default:
              jj_la1[24] = jj_gen;
              break label_10;
            }
          }
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(CLOSEPAR);
    {if (true) return p == null ? Predicate.create(c) : p ;}
    throw new Error("Missing return statement in function");
  }

/** This production handles the three binary operators that can be found in RIF-BLD */
  final public BinaryOp BinaryOp() throws ParseException {
  BinaryOp op ; Term left, right ; Token t ;
    left = Term();
